Fixed navbar display issues on mobile menu

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,8 @@
 }
 
 .home,
-.services,
-.products,
-.sign-up {
+.projects,
+.about {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -16,8 +15,8 @@
   font-size: 3rem;
 }
 
-.services {
-  background-image: url('/images/img-2.jpg');
+.home {
+  /* background-image: url('/images/package.png'); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,8 +24,8 @@
   font-size: 100px;
 }
 
-.products {
-  background-image: url('/images/img-1.jpg');
+.projects {
+  /* background-image: url('/images/package.png'); */
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -34,8 +33,8 @@
   font-size: 100px;
 }
 
-.sign-up {
-  background-image: url('/images/img-8.jpg');
+.about {
+  /* background-image: url('/images/package.png'); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
